# pagable

./: .gitignore  .gitmodules  README.md  index.html  main.py  pyproject.toml
pagable/: __init__.py  __main__.py  api.py  cli.py  elements.py  exceptions.py  frontend_api.py  hooks.py  types.py  utils.py
pagable/backend/: _const.py  _logger.py  core.py  load.py  script.js  utils.py
public/: robots.txt
src/pages/: index.py  markdown.md  test.md
